First Commit, Setup code repo

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+
+  "PitstopSqlConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CarSalesMgntDb;Integrated Security=True;Connect Timeout=30;"
 }
