--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ BenchmarkDotNet.Artifacts/
 # .NET Core
 project.lock.json
 project.fragment.lock.json
+appsettings.Development.json
 artifacts/
 
 # ASP.NET Scaffolding
@@ -361,3 +362,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Src/API.TrackTrace.ShipmentTracking.Contracts/TrackTrace
+
+/Src/.sonarqube/conf
+/Src/.editorconfig
